welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:6: error: ';' expected but 'if' found.
	} if ( b>= 13 && b<=19 ) {
          ^